--- a/.github/workflows/expression-functions.yml
+++ b/.github/workflows/expression-functions.yml
@@ -21,12 +21,14 @@ jobs:
       - name: Format and echo string
         run: echo ${{ format('Hello {0} {1} {2}', 'Mona', 'the', 'Octocat') }}
       - name: Convert job context to JSON
-        run: echo "Job context in JSON: ${{ toJSON(github.job) }}"
+        run: "echo \"Job context in JSON: ${{ toJSON(github.job) }}\""
       - name: Parse JSON string
-        run: echo "Parsed JSON: ${{ fromJSON('{"hello":"world"}').hello }}"
+        run: "echo \"Parsed JSON: ${{ fromJSON('{\"hello\":\"world\"}').hello }}\""
       - name: Hash files
-        run: echo "Hash of files: ${{ hashFiles('**/package-lock.json', '**/Gemfile.lock') }}
+        run: "echo \"Hash of files: ${{ hashFiles('**/package-lock.json', '**/Gemfile.lock') }}\""
       - name: The job has succeeded
         if: ${{ success() }}
+        run: echo "SUCCESS!"
       - name: The job has failed
         if: ${{ failure() }}
+        run: echo "Failure!"
